solve: priority donationgit status!

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "files.associations": {
         "intr-stubs.h": "c",
-        "list.h": "c"
+        "list.h": "c",
+        "memory": "c"
     },
     "C_Cpp.errorSquiggles": "enabled"
 }
